force-app/main/default/objects/Recurring_Donation__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>R00N70000001bHYrEAM</relationshipName>
    <type>Lookup</type>
</CustomField>