force-app/main/default/objects/Recurring_Donation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>R00N70000001bHXfEAM</relationshipName>
    <type>Lookup</type>
</CustomField>