force-app/main/default/objects/Recurring_Donation__c/fields/Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Established__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Established</label>
    <type>Date</type>
</CustomField>