force-app/main/default/objects/Recurring_Donation__c/fields/Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount__c</fullName>
    <description>Recurring Donation Amount</description>
    <label>Donation Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>