force-app/main/default/objects/Recurring_Donation__c/fields/NFG_Master_Recurring_Donation_ID__c.field-meta.xml
<CustomField>
    <fullName>NFG_Master_Recurring_Donation_ID__c</fullName>
    <description>The &quot;master&quot; recurring donation to which subsequent donations are attached.</description>
    <label>NFG Master Recurring Donation ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>