force-app/main/default/objects/Recurring_Donation__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>R00N70000001bHXgEAM</relationshipName>
    <type>Lookup</type>
</CustomField>