force-app/main/default/objects/Recurring_Donation__c/fields/Recurring_Donation_No__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_No__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Recurring Donation #</label>
    <type>AutoNumber</type>
</CustomField>