force-app/main/default/objects/Recurring_Donation__c/fields/Recurring_Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Status__c</fullName>
    <label>Recurring Donation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>