force-app/main/default/objects/Recurring_Donation__c/listViews/AllRecurringDonations.listView-meta.xml
<ListView>
    <fullName>AllRecurringDonations</fullName>
    <filterScope>Everything</filterScope>
    <label>All Recurring Donations</label>
</ListView>