force-app/main/default/objects/Recurring_Donation__c/listViews/AllRecurringDonationswithDetail.listView-meta.xml
<ListView>
    <fullName>AllRecurringDonationswithDetail</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Program_Designation__c</columns>
    <columns>Date_Established__c</columns>
    <columns>Donation_Amount__c</columns>
    <columns>Recurring_Donation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Recurring Donations with  Detail</label>
</ListView>